--- a/index.html
+++ b/index.html
@@ -1,9 +1,71 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<!--notes
+.gitignore
+modernizr
+background pic for header
+profile pic for header
+resume page and in navbar?
+about me content
+-->
+
 <head>
   <title>sregorsemaj</title>
+  <meta charset="UTF-8" name="viewport">
+  <!--script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">-->
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="./css.css">
+
 </head>
 <body>
+
+  <header>
+    background pic
+    round profile pic
+    <nav>
+      <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./blog.html">Blog</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <section>
+    <h3>about me</h3>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+  </section>
+
+  <aside>
+    <h3>links</h3>
+    <ul>
+      <li><a href="#">github</a></li>
+      <li><a href="#">linkedin</a></li>
+      <li><a href="#">twitter</a></li>
+      <li><a href="#">facebook</a></li>
+    </ul>
+  </aside>
+
+  <aside>
+    <h3>recent posts</h3>
+      <ul>
+        <li><h6>recent post 1</h6></li>
+        <li>summary</li>
+        <li><h6>recent post 2</h6></li>
+        <li>summary</li>
+        <li><h6>recent post 3</h6></li>
+        <li>summary</li>
+      </ul>
+  </aside>
+
+  <footer>dumb looking copyright stuff and what not</footer>
 
 </body>
 </html>
