css basics mostly done

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <!--notes
-.gitignore
+.gitignore 
 modernizr
 background pic for header
 profile pic for header
@@ -21,8 +21,7 @@ about me content
 <body>
 
   <header>
-    background pic
-    round profile pic
+    <img src="./images/profile.jpg">
     <nav>
       <ul>
         <li><a href="./index.html">Home</a></li>
@@ -43,7 +42,7 @@ about me content
     </p>
   </section>
 
-  <aside>
+  <aside id="links">
     <h3>links</h3>
     <ul>
       <li><a href="#">github</a></li>
@@ -53,7 +52,7 @@ about me content
     </ul>
   </aside>
 
-  <aside>
+  <aside id="recent-posts">
     <h3>recent posts</h3>
       <ul>
         <li><h6>recent post 1</h6></li>
