--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@ about me content
 <body>
 
   <header>
+    <div id="profile">
     <img src="./images/profile.jpg">
+    </div>
     <nav>
       <ul>
         <li><a href="./index.html">Home</a></li>
@@ -31,7 +33,23 @@ about me content
   </header>
 
   <section>
-    <h3>about me</h3>
+    <h3>About me</h3>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -43,17 +61,17 @@ about me content
   </section>
 
   <aside id="links">
-    <h3>links</h3>
+    <h3>Links</h3>
     <ul>
-      <li><a href="#">github</a></li>
-      <li><a href="#">linkedin</a></li>
-      <li><a href="#">twitter</a></li>
-      <li><a href="#">facebook</a></li>
+      <li><a href="#">Github</a></li>
+      <li><a href="#">Linkedin</a></li>
+      <li><a href="#">Twitter</a></li>
+      <li><a href="#">Facebook</a></li>
     </ul>
   </aside>
 
   <aside id="recent-posts">
-    <h3>recent posts</h3>
+    <h3>Recent posts</h3>
       <ul>
         <li><h6>recent post 1</h6></li>
         <li>summary</li>
