about me content, left notes at top of index and css for to dos

--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!--notes
+<!--notes 
 .gitignore 
 modernizr
-background pic for header
-profile pic for header
-resume page and in navbar?
-about me content
+recent post summaries and headers auto populate and link to appropriate blog post
+footer content
 -->
 
 <head>
@@ -35,50 +33,42 @@ about me content
   <section>
     <h3>About me</h3>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      Hi, my name is James, welcome to my blog. Here you'll find posts on an array of different subjects including tech/web development, volunteering, travel, business/finance, guitar/music, politics, soccer, art, cooking, family, reading, and beer. 
     </p>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      I am currently in my mid-twenties and living with my girlfriend in the Boston area. I'm enrolled in Flatiron School's online Learn Verified program in hopes of becoming a full stack web developer; and I also volunteer at the Lowell Association for the Blind. 
     </p>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      In my spare time I mostly hang out with friends, play soccer, play guitar, and blog; but I also paint and I'm trying to read more. Traveling is another activity I try to set time aside for. In 2015 I visited Panama, Israel, and Thailand. This year I look forward to my first time in South America when I go to Columbia in May/June.   
+    </p>
+    <p>
+      After Flatiron, I hope my career goes in the direction of a start up, preferably something that does some good, not just makes money. However, I would love to gain experience and enjoy the social/collaborative aspect of a big office, while building my own project on the side. 
     </p>
   </section>
 
   <aside id="links">
     <h3>Links</h3>
     <ul>
-      <li><a href="#">Github</a></li>
-      <li><a href="#">Linkedin</a></li>
-      <li><a href="#">Twitter</a></li>
-      <li><a href="#">Facebook</a></li>
+      <li><a href="https://github.com/jd2rogers2" target="_blank">Github</a></li>
+      <li><a href="https://www.linkedin.com/in/jamesrogers3
+" target="_blank">Linkedin</a></li>
+      <li><a href="https://twitter.com/sregorsemaj" target="_blank">Twitter</a></li>
+      <li><a href="https://www.facebook.com/roger.d.jameson" target="_blank">Facebook</a></li>
     </ul>
   </aside>
 
   <aside id="recent-posts">
     <h3>Recent posts</h3>
       <ul>
-        <li><h6>recent post 1</h6></li>
-        <li>summary</li>
-        <li><h6>recent post 2</h6></li>
-        <li>summary</li>
-        <li><h6>recent post 3</h6></li>
-        <li>summary</li>
+        <li><h6><a href="#">recent post 1</a></h6></li>
+        <li>1st sentence as summary Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua.</li>
+        <li><h6><a href="#">recent post 2</a></h6></li>
+        <li>1st sentence as summary Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua.</li>
+        <li><h6><a href="#">recent post 3</a></h6></li>
+        <li>1st sentence as summary Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua.</li>
       </ul>
   </aside>
 
