--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 .gitignore 
 modernizr
 recent post summaries and headers auto populate and link to appropriate blog post
-footer content
 -->
 
 <head>
@@ -14,65 +13,69 @@ footer content
   <!--script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">-->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="./css.css">
-
 </head>
+
 <body>
+  <div id="body">
+    <header>
+      <div id="profile">
+        <img src="./images/profile.jpg">
+      </div> <!--profile-->
+      <nav>
+        <div id="navbar">
+          <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./blog.html">Blog</a></li>
+            <li><a href="#">Resumé</a></li>
+          </ul>
+        </div><!--navbar-->
+      </nav>
+    </header>
 
-  <header>
-    <div id="profile">
-    <img src="./images/profile.jpg">
-    </div>
-    <nav>
+    <section>
+      <h3>About me</h3>
+      <p>
+        Hi, my name is James, welcome to my blog. Here you'll find posts on an array of different subjects including tech/web development, volunteering, travel, business/finance, guitar/music, politics, soccer, art, cooking, family, reading, and beer. 
+      </p>
+      <p>
+        I am currently in my mid-twenties and living with my girlfriend in the Boston area. I'm enrolled in Flatiron School's online Learn Verified program in hopes of becoming a full stack web developer; and I also volunteer at the Lowell Association for the Blind. 
+      </p>
+      <p>
+        In my spare time I mostly hang out with friends, play soccer, play guitar, and blog; but I also paint and I'm trying to read more. Traveling is another activity I try to set time aside for. In 2015 I visited Panama, Israel, and Thailand. This year I look forward to my first time in South America when I go to Columbia in May/June.   
+      </p>
+      <p>
+        After Flatiron, I hope my career goes in the direction of a start up, preferably something that does some good, not just makes money. However, I would love to gain experience and enjoy the social/collaborative aspect of a big office, while building my own project on the side. 
+      </p>
+    </section>
+
+    <aside id="links">
+      <h3>Links</h3>
       <ul>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="./blog.html">Blog</a></li>
+        <li><a href="https://github.com/jd2rogers2" target="_blank">Github</a></li>
+        <li><a href="https://www.linkedin.com/in/jamesrogers3
+  " target="_blank">Linkedin</a></li>
+        <li><a href="https://twitter.com/sregorsemaj" target="_blank">Twitter</a></li>
+        <li><a href="https://www.facebook.com/roger.d.jameson" target="_blank">Facebook</a></li>
       </ul>
-    </nav>
-  </header>
+    </aside>
 
-  <section>
-    <h3>About me</h3>
-    <p>
-      Hi, my name is James, welcome to my blog. Here you'll find posts on an array of different subjects including tech/web development, volunteering, travel, business/finance, guitar/music, politics, soccer, art, cooking, family, reading, and beer. 
-    </p>
-    <p>
-      I am currently in my mid-twenties and living with my girlfriend in the Boston area. I'm enrolled in Flatiron School's online Learn Verified program in hopes of becoming a full stack web developer; and I also volunteer at the Lowell Association for the Blind. 
-    </p>
-    <p>
-      In my spare time I mostly hang out with friends, play soccer, play guitar, and blog; but I also paint and I'm trying to read more. Traveling is another activity I try to set time aside for. In 2015 I visited Panama, Israel, and Thailand. This year I look forward to my first time in South America when I go to Columbia in May/June.   
-    </p>
-    <p>
-      After Flatiron, I hope my career goes in the direction of a start up, preferably something that does some good, not just makes money. However, I would love to gain experience and enjoy the social/collaborative aspect of a big office, while building my own project on the side. 
-    </p>
-  </section>
+    <aside id="recent-posts">
+      <h3>Recent posts</h3>
+        <ul>
+          <li><h4><a href="#">recent post 1</a></h4></li>
+          <li>1st sentence as summary Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua.</li>
+          <li><h4><a href="#">recent post 2</a></h4></li>
+          <li>1st sentence as summary Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua.</li>
+          <li><h4><a href="#">recent post 3</a></h4></li>
+          <li>1st sentence as summary Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua.</li>
+        </ul>
+    </aside>
 
-  <aside id="links">
-    <h3>Links</h3>
-    <ul>
-      <li><a href="https://github.com/jd2rogers2" target="_blank">Github</a></li>
-      <li><a href="https://www.linkedin.com/in/jamesrogers3
-" target="_blank">Linkedin</a></li>
-      <li><a href="https://twitter.com/sregorsemaj" target="_blank">Twitter</a></li>
-      <li><a href="https://www.facebook.com/roger.d.jameson" target="_blank">Facebook</a></li>
-    </ul>
-  </aside>
-
-  <aside id="recent-posts">
-    <h3>Recent posts</h3>
-      <ul>
-        <li><h6><a href="#">recent post 1</a></h6></li>
-        <li>1st sentence as summary Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua.</li>
-        <li><h6><a href="#">recent post 2</a></h6></li>
-        <li>1st sentence as summary Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua.</li>
-        <li><h6><a href="#">recent post 3</a></h6></li>
-        <li>1st sentence as summary Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua.</li>
-      </ul>
-  </aside>
-
-  <footer>dumb looking copyright stuff and what not</footer>
+    <footer> © 2016 James Rogers</footer>
+  </div> <!--body-->
 
 </body>
 </html>
