--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 .gitignore 
 modernizr
 recent post summaries and headers auto populate and link to appropriate blog post
+favicon
+!!!add twitter feed!!!
 -->
 
 <head>
@@ -13,6 +15,8 @@ recent post summaries and headers auto populate and link to appropriate blog pos
   <!--script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">-->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="./css.css">
+  <!--favicon-->
+
 </head>
 
 <body>
@@ -43,6 +47,8 @@ recent post summaries and headers auto populate and link to appropriate blog pos
       <p>
         In my spare time I mostly hang out with friends, play soccer, play guitar, and blog; but I also paint and I'm trying to read more. Traveling is another activity I try to set time aside for. In 2015 I visited Panama, Israel, and Thailand. This year I look forward to my first time in South America when I go to Columbia in May/June.   
       </p>
+      <img src="./images/standup-desk.jpg" id="slideshow" alt="future slideshow">
+      <sub>future slide show</sub>
       <p>
         After Flatiron, I hope my career goes in the direction of a start up, preferably something that does some good, not just makes money. However, I would love to gain experience and enjoy the social/collaborative aspect of a big office, while building my own project on the side. 
       </p>
@@ -51,24 +57,24 @@ recent post summaries and headers auto populate and link to appropriate blog pos
     <aside id="links">
       <h3>Links</h3>
       <ul>
-        <li><a href="https://github.com/jd2rogers2" target="_blank">Github</a></li>
+        <li><a href="https://github.com/jd2rogers2" target="_blank"><img src="./images/github.png"></a></li>
+        <li><a href="https://twitter.com/sregorsemaj" target="_blank"><img src="./images/twitter.jpeg"></a></li>
         <li><a href="https://www.linkedin.com/in/jamesrogers3
-  " target="_blank">Linkedin</a></li>
-        <li><a href="https://twitter.com/sregorsemaj" target="_blank">Twitter</a></li>
-        <li><a href="https://www.facebook.com/roger.d.jameson" target="_blank">Facebook</a></li>
+        " target="_blank"><img src="./images/linkedin.png"></a></li>
+        <li><a href="https://www.facebook.com/roger.d.jameson" target="_blank"><img src="./images/facebook.png"></a></li>
       </ul>
     </aside>
 
     <aside id="recent-posts">
       <h3>Recent posts</h3>
         <ul>
-          <li><h4><a href="#">recent post 1</a></h4></li>
+          <li><a href="#">recent post 1</a></li>
           <li>1st sentence as summary Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua.</li>
-          <li><h4><a href="#">recent post 2</a></h4></li>
+          <li><a href="#">recent post 2</a></li>
           <li>1st sentence as summary Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua.</li>
-          <li><h4><a href="#">recent post 3</a></h4></li>
+          <li><a href="#">recent post 3</a></li>
           <li>1st sentence as summary Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua.</li>
         </ul>
