linked to js page (currently empty), also consolidated all notes to evernote

--- a/index.html
+++ b/index.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!--notes 
-.gitignore 
-modernizr
-recent post summaries and headers auto populate and link to appropriate blog post
-favicon
-!!!add twitter feed!!!
--->
-
 <head>
   <title>sregorsemaj</title>
   <meta charset="UTF-8" name="viewport">
   <!--script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">-->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="./css.css">
+  <script type="text/javascript" src="./javascript.js"></script>
   <!--favicon-->
 
 </head>
