added js and css files, built very basics of blog.html, forgot to make a separate branch again :(

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-  <title>sregorsemaj</title>
+  <title>sregorsemaj - home</title>
   <meta charset="UTF-8" name="viewport">
-  <!--script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">-->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
-  <link rel="stylesheet" type="text/css" href="./css.css">
-  <script type="text/javascript" src="./javascript.js"></script>
+  <link rel="stylesheet" type="text/css" href="./index.css">
+  <script type="text/javascript" src="./index.js"></script>
+  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">-->
   <!--favicon-->
 
 </head>
