not good enough at javascript yet lol

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="navbar">
           <ul>
             <li><a href="./index.html">Home</a></li>
-            <li><a href="./blog.html">Blog</a></li>
+            <li><a href="./blog.html" id="blog">Blog</a></li>
             <li><a href="#">Resumé</a></li>
           </ul>
         </div><!--navbar-->
