--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
 <body>
   <div id="body">
   <!--pic and navbar-->
-  <aside>
+  <aside id="background">
     <img src="./images/profile.jpg">
     <nav>
         <div id="navbar">
@@ -29,7 +29,7 @@
   </aside>
   
   <!--blog titles and snippets in reverse chronological order-->
-  <aside>
+  <aside id="recent-posts">
     <h3>Recent posts</h3>
     <ul>
       <li>recent post 1</li>
@@ -43,6 +43,28 @@
       tempor incididunt ut labore et dolore magna aliqua.</li>
     </ul>
   </aside>
+
+  <section>
+    <h3>clicked post/default to most recent</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </section>
   
   <footer> © 2016 James Rogers</footer>
   </div> <!--body-->
