didn't actually post, just minor css, floating/clearing issues

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>sregorsemaj - home</title>
+  <title>jd2rogers2.github.io - home</title>
   <meta charset="UTF-8" name="viewport">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="./index.css">
