--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>sregorsemaj - blog</title>
+  <title>jd2rogers.github.io - blog</title>
   <meta charset="UTF-8" name="viewport">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="./blog.css">
@@ -26,6 +26,17 @@
           </ul>
         </div><!--navbar-->
       </nav>
+  </aside>
+
+  <aside id="links">
+    <h3>Links</h3>
+    <ul>
+      <li><a href="https://github.com/jd2rogers2" target="_blank"><img src="./images/github.png"></a></li>
+      <li><a href="https://twitter.com/sregorsemaj" target="_blank"><img src="./images/twitter.jpeg"></a></li>
+      <li><a href="https://www.linkedin.com/in/jamesrogers3
+      " target="_blank"><img src="./images/linkedin.png"></a></li>
+      <li><a href="https://www.facebook.com/roger.d.jameson" target="_blank"><img src="./images/facebook.png"></a></li>
+    </ul>
   </aside>
   
   <!--blog titles and snippets in reverse chronological order-->
