--- a/blog.html
+++ b/blog.html
@@ -2,82 +2,77 @@
 <html lang="en">
 
 <head>
-  <title>jd2rogers.github.io - blog</title>
+  <title>jd2rogers2.github.io - home</title>
   <meta charset="UTF-8" name="viewport">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="./blog.css">
-  <script type="text/javascript" src="./blog.js"></script>
+
+  <!--javascript-->
+  <!--<script type="text/javascript" src="./index.js"></script>-->
   <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">-->
+
   <!--favicon-->
 
 </head>
 
 <body>
   <div id="body">
-  <!--pic and navbar-->
-  <aside id="background">
-    <img src="./images/profile.jpg">
-    <nav>
+    <header>
+      <div id="profile">
+        <img src="./images/profile.jpg">
+      </div> <!--profile-->
+      <nav>
         <div id="navbar">
           <ul>
             <li><a href="./index.html">Home</a></li>
-            <li><a href="./blog.html">Blog</a></li>
+            <li><a href="#" id="blog">Blog</a></li>
             <li><a href="#">Resumé</a></li>
           </ul>
         </div><!--navbar-->
       </nav>
-  </aside>
+    </header>
 
-  <aside id="links">
-    <h3>Links</h3>
-    <ul>
-      <li><a href="https://github.com/jd2rogers2" target="_blank"><img src="./images/github.png"></a></li>
-      <li><a href="https://twitter.com/sregorsemaj" target="_blank"><img src="./images/twitter.jpeg"></a></li>
-      <li><a href="https://www.linkedin.com/in/jamesrogers3
-      " target="_blank"><img src="./images/linkedin.png"></a></li>
-      <li><a href="https://www.facebook.com/roger.d.jameson" target="_blank"><img src="./images/facebook.png"></a></li>
-    </ul>
-  </aside>
-  
-  <!--blog titles and snippets in reverse chronological order-->
-  <aside id="recent-posts">
-    <h3>Recent posts</h3>
-    <ul>
-      <li>recent post 1</li>
-      <li>1st sentence as summary Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua.</li>
-      <li>recent post 2</li>
-      <li>1st sentence as summary Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua.</li>
-      <li>recent post 3</li>
-      <li>1st sentence as summary Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua.</li>
-    </ul>
-  </aside>
+    <section>
+      <h3>Why did I decide to learn software development?</h3>
 
-  <section>
-    <h3>clicked post/default to most recent</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </section>
-  
-  <footer> © 2016 James Rogers</footer>
+      <p>In short, because I wasn’t being challenged at my last position.</p>
+
+      <p>Well, I picked the wrong major and the wrong school and breezed through college with minimal effort. Then I finally got a job in real estate but, as I said, wasn’t being challenged. I dipped my feet in a lot of different areas such as GRE studies, series 7 studies, built a PC, and ended up really enjoying the PC.</p>
+
+      <p>After lots of research on how each component works, I finally felt like I had a good idea of what I wanted to buy. Then a day or two of tinkering, maybe I had to buy one more component I can’t remember, and then downloading Linux; and I was done! It’s a really cool experience, using a computer that you built. Naturally I wanted to continue, so I poked around on some MOOC Java classes and CodeAcademy and what not. After a while of that, it was time to take the plunge, so I started researching full time classes.</p>
+
+      <p>Obviously a big part of my decision was the return on investment. I’d get to be a part of an industry with massive growth and that is the cool thing right now; the salary bump wasn’t bad either, and all for a minimal investment.</p>
+
+      <p>I had been saving for at least a year already, since I knew I was going to be making a career change. So a little sacrifice there in the form of reduced spending, mixed with the opportunity cost of no income for 3-6 months, tuition, and (again) 3-6 months of hard work; but that’s it, that’s really all of the expenses.</p>
+
+      <p>Flatiron was a no brainer. No other bootcamps have released jobs reports or offer tuition reimbursement, and the price for the online Learn Verified program can’t be beaten.</p>
+
+      <sub>posted 12 May 2106</sub>
+
+    </section>
+
+    <aside id="links">
+      <h3>Links</h3>
+      <ul>
+        <li><a href="https://github.com/jd2rogers2" target="_blank"><img src="./images/github.png"></a></li>
+        <li><a href="https://twitter.com/sregorsemaj" target="_blank"><img src="./images/twitter.jpeg"></a></li>
+        <li><a href="https://www.linkedin.com/in/jamesrogers3
+        " target="_blank"><img src="./images/linkedin.png"></a></li>
+        <li><a href="https://www.facebook.com/roger.d.jameson" target="_blank"><img src="./images/facebook.png"></a></li>
+      </ul>
+    </aside>
+
+    <aside id="recent-posts">
+      <h3>Recent posts</h3>
+        <ul>
+          <li><a href="#">Why did I decide to learn software development?</a>
+            <sub>posted 12 May 2106</sub>
+          </li>
+          <li>In short, because I wasn’t being challenged at my last position.</li>
+        </ul>
+    </aside>
+
+    <footer> © 2016 James Rogers</footer>
   </div> <!--body-->
 
 </body>
