--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
   <meta charset="UTF-8" name="viewport">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="./index.css">
-  <script type="text/javascript" src="./index.js"></script>
+
+  <!--javascript-->
+  <!--<script type="text/javascript" src="./index.js"></script>-->
   <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">-->
+
   <!--favicon-->
 
 </head>
@@ -62,12 +65,6 @@
       <h3>Recent posts</h3>
         <ul>
           <li><a href="#">recent post 1</a></li>
-          <li>1st sentence as summary Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua.</li>
-          <li><a href="#">recent post 2</a></li>
-          <li>1st sentence as summary Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua.</li>
-          <li><a href="#">recent post 3</a></li>
           <li>1st sentence as summary Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua.</li>
         </ul>
