--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@
     <aside id="recent-posts">
       <h3>Recent posts</h3>
         <ul>
-          <li><a href="#">recent post 1</a></li>
-          <li>1st sentence as summary Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua.</li>
+           <li><a href="./blog.html">Why did I decide to learn software development?</a>
+          </li>
+          <li>In short... because I wasn’t being challenged at my last position, so I decided to start figuring out what I wanted to do.</li>
+            <sub>posted 12 May 2016</sub>
         </ul>
     </aside>
 
