--- a/blog.html
+++ b/blog.html
@@ -35,9 +35,9 @@
     <section>
       <h3>Why did I decide to learn software development?</h3>
 
-      <p>In short, because I wasn’t being challenged at my last position.</p>
+      <p>In short... because I wasn’t being challenged at my last position, so I decided to start figuring out what I wanted to do.</p>
 
-      <p>Well, I picked the wrong major and the wrong school and breezed through college with minimal effort. Then I finally got a job in real estate but, as I said, wasn’t being challenged. I dipped my feet in a lot of different areas such as GRE studies, series 7 studies, built a PC, and ended up really enjoying the PC.</p>
+      <p>It starts when I picked the wrong major and the wrong school and breezed through college with minimal effort. Then I finally got a job in real estate but, as I said, wasn’t being challenged. I dipped my feet in a lot of different areas such as GRE studies, series 7 studies, building a PC, and ended up really enjoying the PC.</p>
 
       <p>After lots of research on how each component works, I finally felt like I had a good idea of what I wanted to buy. Then a day or two of tinkering, maybe I had to buy one more component I can’t remember, and then downloading Linux; and I was done! It’s a really cool experience, using a computer that you built. Naturally I wanted to continue, so I poked around on some MOOC Java classes and CodeAcademy and what not. After a while of that, it was time to take the plunge, so I started researching full time classes.</p>
 
@@ -47,7 +47,7 @@
 
       <p>Flatiron was a no brainer. No other bootcamps have released jobs reports or offer tuition reimbursement, and the price for the online Learn Verified program can’t be beaten.</p>
 
-      <sub>posted 12 May 2106</sub>
+      <sub>posted 12 May 2016</sub>
 
     </section>
 
@@ -66,9 +66,9 @@
       <h3>Recent posts</h3>
         <ul>
           <li><a href="#">Why did I decide to learn software development?</a>
-            <sub>posted 12 May 2106</sub>
           </li>
-          <li>In short, because I wasn’t being challenged at my last position.</li>
+          <li>In short... because I wasn’t being challenged at my last position, so I decided to start figuring out what I wanted to do.</li>
+            <sub>posted 12 May 2016</sub>
         </ul>
     </aside>
 
