--- a/blog.html
+++ b/blog.html
@@ -33,6 +33,32 @@
     </header>
 
     <section>
+      <h3>My Boss is a Jerk - pt.1</h3>
+
+      <p>He’s never happy. It’s like he’s watching over my shoulder and knows my exact productivity and precisely how much time I've spent in the office.</p>
+
+      <p>The day’s objectives are just so undefined; whether he feels satisfied with the amount of work I get done or not, is completely arbitrary. If I spend even 15 minutes less than a normal eight hour day in the office, then he stresses out and I can just tell that it nags him for the entire evening. He always makes these unnecessary remarks just as I’m leaving the office for the day. How is that supposed to motivate me?</p>
+
+      <p>He’s never happy. #MyBossisaJerk</p>
+
+      <sub>posted 16 May 2016</sub>
+
+    </section>
+
+    <section>
+      <h3>My Boss is a Jerk - series intro</h3>
+
+      <p>Welcome to the ‘My Boss is a Jerk’ series. I will be chronicling my exploits of self employment and working from home.</p>
+
+      <p>To be honest I’m not self employed yet, but hope to be (at least partially with my own side project) in about three months time. I am taking a self-paced online webdev class until then; so there will be similarities as I motivate myself and manage my own time.</p>
+
+      <p>Welcome to the ‘My Boss is a Jerk’ series. #MyBossisaJerk</p>
+
+      <sub>posted 16 May 2016</sub>
+
+    </section>
+
+    <section>
       <h3>Why did I decide to learn software development?</h3>
 
       <p>In short... because I wasn’t being challenged at my last position, so I decided to start figuring out what I wanted to do.</p>
@@ -65,6 +91,14 @@
     <aside id="recent-posts">
       <h3>Recent posts</h3>
         <ul>
+          <li><a href="#">My Boss is a Jerk - pt.1</a>
+          </li>
+          <li>He’s never happy. It’s like he’s watching over my shoulder and knows my exact productivity and precisely how much time I've spent in the office.</li>
+            <sub>posted 16 May 2016</sub>
+          <li><a href="#">My boss is a jerk - series intro</a>
+          </li>
+          <li>Welcome to the ‘My Boss is a Jerk’ series. I will be chronicling my exploits of self employment and working from home.</li>
+            <sub>posted 16 May 2016</sub>
           <li><a href="#">Why did I decide to learn software development?</a>
           </li>
           <li>In short... because I wasn’t being challenged at my last position, so I decided to start figuring out what I wanted to do.</li>
