2 posts, css fix with posts/links clearing/html order

--- a/blog.html
+++ b/blog.html
@@ -44,6 +44,19 @@
       </ul>
     </aside>
 
+    <section>
+      <h3>My Boss is a Jerk - pt.1</h3>
+
+      <p>He’s never happy. It’s like he’s watching over my shoulder and knows my exact productivity and precisely how much time I've spent in the office.</p>
+
+      <p>The day’s objectives are just so undefined; whether he feels satisfied with the amount of work I get done or not, is completely arbitrary. If I spend even 15 minutes less than a normal eight hour day in the office, then he stresses out and I can just tell that it nags him for the entire evening. He always makes these unnecessary remarks just as I’m leaving the office for the day. How is that supposed to motivate me?</p>
+
+      <p>He’s never happy. #MyBossisaJerk</p>
+
+      <sub>posted 16 May 2016</sub>
+
+    </section>
+
     <aside id="recent-posts">
       <h3>Recent posts</h3>
         <ul>
@@ -63,19 +76,6 @@
     </aside>
 
     <section>
-      <h3>My Boss is a Jerk - pt.1</h3>
-
-      <p>He’s never happy. It’s like he’s watching over my shoulder and knows my exact productivity and precisely how much time I've spent in the office.</p>
-
-      <p>The day’s objectives are just so undefined; whether he feels satisfied with the amount of work I get done or not, is completely arbitrary. If I spend even 15 minutes less than a normal eight hour day in the office, then he stresses out and I can just tell that it nags him for the entire evening. He always makes these unnecessary remarks just as I’m leaving the office for the day. How is that supposed to motivate me?</p>
-
-      <p>He’s never happy. #MyBossisaJerk</p>
-
-      <sub>posted 16 May 2016</sub>
-
-    </section>
-
-    <section>
       <h3>My Boss is a Jerk - series intro</h3>
 
       <p>Welcome to the ‘My Boss is a Jerk’ series. I will be chronicling my exploits of self employment and working from home.</p>
@@ -91,9 +91,9 @@
     <section>
       <h3>Why did I decide to learn software development?</h3>
 
-      <p>In short... because I wasn’t being challenged at my last position, so I decided to start figuring out what I wanted to do.</p>
+      <p>In short... because I tried some other things and enjoyed this the most I wasn’t being challenged at my last position, so I decided to start figuring out what I wanted to do.</p>
 
-      <p>It starts when I picked the wrong major and the wrong school and breezed through college with minimal effort. Then I finally got a job in real estate but, as I said, wasn’t being challenged. I dipped my feet in a lot of different areas such as GRE studies, series 7 studies, building a PC, and ended up really enjoying the PC.</p>
+      <p>It starts when I picked the wrong major and the wrong school and breezed through college with minimal effort. Then I finally got a job in real estate but wasn’t being challenged. I dipped my feet in a lot of different areas such as GRE studies, series 7 studies, building a PC, and ended up really enjoying the PC.</p>
 
       <p>After lots of research on how each component works, I finally felt like I had a good idea of what I wanted to buy. Then a day or two of tinkering, maybe I had to buy one more component I can’t remember, and then downloading Linux; and I was done! It’s a really cool experience, using a computer that you built. Naturally I wanted to continue, so I poked around on some MOOC Java classes and CodeAcademy and what not. After a while of that, it was time to take the plunge, so I started researching full time classes.</p>
 
