--- a/blog.html
+++ b/blog.html
@@ -64,7 +64,7 @@
           </li>
           <li>He’s never happy. It’s like he’s watching over my shoulder and knows my exact productivity and precisely how much time I've spent in the office.</li>
             <sub>posted 16 May 2016</sub>
-          <li><a href="#">My boss is a jerk - series intro</a>
+          <li><a href="#">My Boss is a Jerk - series intro</a>
           </li>
           <li>Welcome to the ‘My Boss is a Jerk’ series. I will be chronicling my exploits of self employment and working from home.</li>
             <sub>posted 16 May 2016</sub>
@@ -87,6 +87,11 @@
       <sub>posted 16 May 2016</sub>
 
     </section>
+    
+    <aside id="twitter">
+      <a class="twitter-timeline" href="https://twitter.com/sregorsemaj" data-widget-id="732700314827149312">Tweets by @sregorsemaj</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+    </aside>
 
     <section>
       <h3>Why did I decide to learn software development?</h3>
