--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
       <p>
         After Flatiron, I hope my career goes in the direction of a start up, preferably something that does some good, not just makes money. However, I would love to gain experience and enjoy the social/collaborative aspect of a big office, while building my own project on the side. 
       </p>
+
+      <sub>posted 10 May 2016</sub>
     </section>
 
     <aside id="links">
@@ -64,6 +66,10 @@
     <aside id="recent-posts">
       <h3>Recent posts</h3>
         <ul>
+          <li><a href="#">Ruby Filetree Setup</a>
+          </li>
+          <li>Honestly, for me, as I started to learn scraping, the most confusing thing was the file set up. </li>
+            <sub>posted 10 June 2016</sub>
           <li><a href="#">My Boss is a Jerk - pt.1</a>
           </li>
           <li>He’s never happy. It’s like he’s watching over my shoulder and knows my exact productivity and precisely how much time I've spent in the office.</li>
@@ -72,10 +78,6 @@
           </li>
           <li>Welcome to the ‘My Boss is a Jerk’ series. I will be chronicling my exploits of self employment and working from home.</li>
             <sub>posted 16 May 2016</sub>
-          <li><a href="#">Why did I decide to learn software development?</a>
-          </li>
-          <li>In short... because I wasn’t being challenged at my last position, so I decided to start figuring out what I wanted to do.</li>
-            <sub>posted 12 May 2016</sub>
         </ul>
     </aside>
 
