blog content edit

--- a/blog.html
+++ b/blog.html
@@ -45,11 +45,11 @@
     </aside>
 
     <section>
-      <h3>Ruby Filetree Setup</h3>
+      <h3>Ruby Gem Filetree Setup</h3>
 
-      <p>As I started to learn scraping, I actually found one of the hardest things to be the project set up. Requiring different things in different files, shell scripts, shebang statements, and all the other files that support your code but you don't actually learn that much about in a class.</p>
+      <p>As I started to learn scraping, I actually found one of the hardest things to be the project set up. Requiring different things in different files, shell scripts, shebang statements, and all the other files that support your code but you don't actually learn that much about in a class. </p>
 
-      <p>So I thought I would build a list of everything that goes in your root directory for a ruby project. I hope you like it.</p>
+      <p>After searching the web, I found nothing that had a filetree and description of what the file did and what content to include. So I thought I would build a list of everything that goes in your root directory for a ruby project. I hope you like it.</p>
 
       <p>A quick note for those who have a similar skill level as I do now: you may be wondering about shell scripts and requiring gems/files, I have listed some additional links at the end of this blog for you.</p>
 
